starting data formatting

--- a/notebooks/1.0-xs-scraper.ipynb
+++ b/notebooks/1.0-xs-scraper.ipynb
@@ -2834,7 +2834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "id": "435f41e2",
    "metadata": {},
    "outputs": [],
@@ -2844,7 +2844,7 @@
     "    def __init__(self):\n",
     "        a = str(datetime.now().month)\n",
     "        b = str(datetime.now().day -1)\n",
-    "        c = str(datetime.now().year -1)\n",
+    "        c = str(datetime.now().year -2)\n",
     "        d = str(datetime.now().year)\n",
     "        yesterday = str(a + '/' + b + '/' + d)\n",
     "        last_year = str(a + '/' + b + '/' + c)\n",
@@ -2868,7 +2868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "id": "4df8003d",
    "metadata": {},
    "outputs": [
@@ -2904,48 +2904,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>07/14/2021</td>\n",
-       "      <td>42.00</td>\n",
-       "      <td>42.17</td>\n",
-       "      <td>41.46</td>\n",
-       "      <td>41.97</td>\n",
-       "      <td>280,343</td>\n",
+       "      <td>07/19/2021</td>\n",
+       "      <td>2,623.11</td>\n",
+       "      <td>2,624.94</td>\n",
+       "      <td>2,570.74</td>\n",
+       "      <td>2,585.08</td>\n",
+       "      <td>1,285,466</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>07/13/2021</td>\n",
-       "      <td>42.45</td>\n",
-       "      <td>42.54</td>\n",
-       "      <td>41.74</td>\n",
-       "      <td>41.79</td>\n",
-       "      <td>285,401</td>\n",
+       "      <td>07/16/2021</td>\n",
+       "      <td>2,632.82</td>\n",
+       "      <td>2,643.66</td>\n",
+       "      <td>2,616.43</td>\n",
+       "      <td>2,636.91</td>\n",
+       "      <td>743,059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>07/12/2021</td>\n",
-       "      <td>42.39</td>\n",
-       "      <td>42.63</td>\n",
-       "      <td>42.20</td>\n",
-       "      <td>42.56</td>\n",
-       "      <td>328,291</td>\n",
+       "      <td>07/15/2021</td>\n",
+       "      <td>2,650.00</td>\n",
+       "      <td>2,651.90</td>\n",
+       "      <td>2,611.96</td>\n",
+       "      <td>2,625.33</td>\n",
+       "      <td>829,316</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>07/09/2021</td>\n",
-       "      <td>42.44</td>\n",
-       "      <td>42.79</td>\n",
-       "      <td>42.11</td>\n",
-       "      <td>42.53</td>\n",
-       "      <td>576,238</td>\n",
+       "      <td>07/14/2021</td>\n",
+       "      <td>2,638.03</td>\n",
+       "      <td>2,659.92</td>\n",
+       "      <td>2,637.96</td>\n",
+       "      <td>2,641.65</td>\n",
+       "      <td>895,927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>07/08/2021</td>\n",
-       "      <td>42.44</td>\n",
-       "      <td>42.58</td>\n",
-       "      <td>41.76</td>\n",
-       "      <td>42.19</td>\n",
-       "      <td>409,203</td>\n",
+       "      <td>07/13/2021</td>\n",
+       "      <td>2,617.63</td>\n",
+       "      <td>2,640.84</td>\n",
+       "      <td>2,612.74</td>\n",
+       "      <td>2,619.89</td>\n",
+       "      <td>830,898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2957,73 +2957,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>07/24/2020</td>\n",
+       "      <td>1,498.93</td>\n",
+       "      <td>1,517.64</td>\n",
+       "      <td>1,488.40</td>\n",
+       "      <td>1,511.87</td>\n",
+       "      <td>1,544,404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>248</th>\n",
-       "      <td>07/20/2020</td>\n",
-       "      <td>37.28</td>\n",
-       "      <td>37.28</td>\n",
-       "      <td>36.60</td>\n",
-       "      <td>37.13</td>\n",
-       "      <td>470,737</td>\n",
+       "      <td>07/23/2020</td>\n",
+       "      <td>1,566.97</td>\n",
+       "      <td>1,571.87</td>\n",
+       "      <td>1,507.39</td>\n",
+       "      <td>1,515.68</td>\n",
+       "      <td>1,627,634</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>249</th>\n",
-       "      <td>07/17/2020</td>\n",
-       "      <td>36.83</td>\n",
-       "      <td>37.44</td>\n",
-       "      <td>36.69</td>\n",
-       "      <td>37.26</td>\n",
-       "      <td>303,173</td>\n",
+       "      <td>07/22/2020</td>\n",
+       "      <td>1,560.50</td>\n",
+       "      <td>1,570.00</td>\n",
+       "      <td>1,546.10</td>\n",
+       "      <td>1,568.49</td>\n",
+       "      <td>931,985</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>250</th>\n",
-       "      <td>07/16/2020</td>\n",
-       "      <td>36.04</td>\n",
-       "      <td>36.79</td>\n",
-       "      <td>36.04</td>\n",
-       "      <td>36.71</td>\n",
-       "      <td>379,097</td>\n",
+       "      <td>07/21/2020</td>\n",
+       "      <td>1,586.99</td>\n",
+       "      <td>1,586.99</td>\n",
+       "      <td>1,554.28</td>\n",
+       "      <td>1,558.42</td>\n",
+       "      <td>1,218,645</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>251</th>\n",
-       "      <td>07/15/2020</td>\n",
-       "      <td>36.64</td>\n",
-       "      <td>37.15</td>\n",
-       "      <td>36.06</td>\n",
-       "      <td>36.07</td>\n",
-       "      <td>293,650</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>252</th>\n",
-       "      <td>07/14/2020</td>\n",
-       "      <td>35.86</td>\n",
-       "      <td>36.28</td>\n",
-       "      <td>35.53</td>\n",
-       "      <td>36.05</td>\n",
-       "      <td>245,109</td>\n",
+       "      <td>07/20/2020</td>\n",
+       "      <td>1,515.26</td>\n",
+       "      <td>1,570.29</td>\n",
+       "      <td>1,503.60</td>\n",
+       "      <td>1,565.72</td>\n",
+       "      <td>1,557,252</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>253 rows × 6 columns</p>\n",
+       "<p>252 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date   Open   High    Low  Close   Volume\n",
-       "0    07/14/2021  42.00  42.17  41.46  41.97  280,343\n",
-       "1    07/13/2021  42.45  42.54  41.74  41.79  285,401\n",
-       "2    07/12/2021  42.39  42.63  42.20  42.56  328,291\n",
-       "3    07/09/2021  42.44  42.79  42.11  42.53  576,238\n",
-       "4    07/08/2021  42.44  42.58  41.76  42.19  409,203\n",
-       "..          ...    ...    ...    ...    ...      ...\n",
-       "248  07/20/2020  37.28  37.28  36.60  37.13  470,737\n",
-       "249  07/17/2020  36.83  37.44  36.69  37.26  303,173\n",
-       "250  07/16/2020  36.04  36.79  36.04  36.71  379,097\n",
-       "251  07/15/2020  36.64  37.15  36.06  36.07  293,650\n",
-       "252  07/14/2020  35.86  36.28  35.53  36.05  245,109\n",
+       "           Date      Open      High       Low     Close     Volume\n",
+       "0    07/19/2021  2,623.11  2,624.94  2,570.74  2,585.08  1,285,466\n",
+       "1    07/16/2021  2,632.82  2,643.66  2,616.43  2,636.91    743,059\n",
+       "2    07/15/2021  2,650.00  2,651.90  2,611.96  2,625.33    829,316\n",
+       "3    07/14/2021  2,638.03  2,659.92  2,637.96  2,641.65    895,927\n",
+       "4    07/13/2021  2,617.63  2,640.84  2,612.74  2,619.89    830,898\n",
+       "..          ...       ...       ...       ...       ...        ...\n",
+       "247  07/24/2020  1,498.93  1,517.64  1,488.40  1,511.87  1,544,404\n",
+       "248  07/23/2020  1,566.97  1,571.87  1,507.39  1,515.68  1,627,634\n",
+       "249  07/22/2020  1,560.50  1,570.00  1,546.10  1,568.49    931,985\n",
+       "250  07/21/2020  1,586.99  1,586.99  1,554.28  1,558.42  1,218,645\n",
+       "251  07/20/2020  1,515.26  1,570.29  1,503.60  1,565.72  1,557,252\n",
        "\n",
-       "[253 rows x 6 columns]"
+       "[252 rows x 6 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3031,38 +3031,324 @@
    "source": [
     "import pandas as pd\n",
     "ms = MarketScraper()\n",
-    "ms.get_price_hist('')"
+    "goog_data = ms.get_price_hist('goog')\n",
+    "goog_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "df70d041",
+   "execution_count": 10,
+   "id": "3242e2c7",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable function object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_51952/2490333248.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mticker\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'goog'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0myesterday\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlastyear\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdate_year_ago\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mhist_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_price_hist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0myesterday\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlastyear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable function object"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/zone\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "ticker='goog'\n",
-    "yesterday,lastyear = date_year_ago\n",
-    "hist_data = get_price_hist(ticker,yesterday,lastyear)"
+    "cd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9bf9c092",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goog_data.to_csv('~/Documents/advantage-investing/data/raw/Goog.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d290b0f",
+   "metadata": {},
+   "source": [
+    "### getting marketcap, eps, ect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "df70d041",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " '',\n",
+       " 'Open',\n",
+       " '$32.54',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Day Range',\n",
+       " '30.07 - 33.30',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '52 Week Range',\n",
+       " '14.27 - 62.80',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Market Cap',\n",
+       " '$7.64B',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Shares Outstanding',\n",
+       " '240.82M',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Public Float',\n",
+       " '165.12M',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Beta',\n",
+       " '1.09',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Rev. per Employee',\n",
+       " '$289.19',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'P/E Ratio',\n",
+       " 'N/A',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'EPS',\n",
+       " '-$1.50',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Yield',\n",
+       " 'N/A',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Dividend',\n",
+       " 'N/A',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Ex-Dividend Date',\n",
+       " 'N/A',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Short Interest',\n",
+       " '28.74M',\n",
+       " '06/30/21',\n",
+       " '',\n",
+       " '',\n",
+       " '% of Float Shorted',\n",
+       " '17.41%',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Average Volume',\n",
+       " '38.15M',\n",
+       " '',\n",
+       " '',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r=requests.get('https://www.marketwatch.com/investing/stock/SPCE?mod=mw_quote_tab')\n",
+    "soup = bs4.BeautifulSoup(r.content, 'html.parser')\n",
+    "soup_text = soup.find_all('ul',{'class':'list list--kv list--col50'})[0].text.split('\\n')\n",
+    "soup_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "2230a736",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrap_date = soup_metrics.index('Short Interest')+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "c3a46e94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Open',\n",
+       " '$32.54',\n",
+       " 'Day Range',\n",
+       " '30.07 - 33.30',\n",
+       " '52 Week Range',\n",
+       " '14.27 - 62.80',\n",
+       " 'Market Cap',\n",
+       " '$7.64B',\n",
+       " 'Shares Outstanding',\n",
+       " '240.82M',\n",
+       " 'Public Float',\n",
+       " '165.12M',\n",
+       " 'Beta',\n",
+       " '1.09',\n",
+       " 'Rev. per Employee',\n",
+       " '$289.19',\n",
+       " 'P/E Ratio',\n",
+       " 'N/A',\n",
+       " 'EPS',\n",
+       " '-$1.50',\n",
+       " 'Yield',\n",
+       " 'N/A',\n",
+       " 'Dividend',\n",
+       " 'N/A',\n",
+       " 'Ex-Dividend Date',\n",
+       " 'N/A',\n",
+       " 'Short Interest',\n",
+       " '28.74M',\n",
+       " '% of Float Shorted',\n",
+       " '17.41%',\n",
+       " 'Average Volume',\n",
+       " '38.15M']"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup_metrics = list(filter(None, soup_text))\n",
+    "scrap_date = soup_metrics.index('Short Interest')+2\n",
+    "soup_metrics.pop(scrap_date)\n",
+    "soup_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "e6a7693a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = soup_metrics[0:][::2] # even\n",
+    "values = soup_metrics[1:][::2] # odd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "edef09e7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Day Range</th>\n",
+       "      <th>52 Week Range</th>\n",
+       "      <th>Market Cap</th>\n",
+       "      <th>Shares Outstanding</th>\n",
+       "      <th>Public Float</th>\n",
+       "      <th>Beta</th>\n",
+       "      <th>Rev. per Employee</th>\n",
+       "      <th>P/E Ratio</th>\n",
+       "      <th>EPS</th>\n",
+       "      <th>Yield</th>\n",
+       "      <th>Dividend</th>\n",
+       "      <th>Ex-Dividend Date</th>\n",
+       "      <th>Short Interest</th>\n",
+       "      <th>% of Float Shorted</th>\n",
+       "      <th>Average Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$32.54</td>\n",
+       "      <td>30.07 - 33.30</td>\n",
+       "      <td>14.27 - 62.80</td>\n",
+       "      <td>$7.64B</td>\n",
+       "      <td>240.82M</td>\n",
+       "      <td>165.12M</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>$289.19</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>-$1.50</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>28.74M</td>\n",
+       "      <td>17.41%</td>\n",
+       "      <td>38.15M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Open      Day Range  52 Week Range Market Cap Shares Outstanding  \\\n",
+       "0  $32.54  30.07 - 33.30  14.27 - 62.80     $7.64B            240.82M   \n",
+       "\n",
+       "  Public Float  Beta Rev. per Employee P/E Ratio     EPS Yield Dividend  \\\n",
+       "0      165.12M  1.09           $289.19       N/A  -$1.50   N/A      N/A   \n",
+       "\n",
+       "  Ex-Dividend Date Short Interest % of Float Shorted Average Volume  \n",
+       "0              N/A         28.74M             17.41%         38.15M  "
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame([values],columns=metrics)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86a92426",
+   "id": "5b115ecd",
    "metadata": {},
    "outputs": [],
    "source": []
