--- a/notebooks/1.0-xs-analysis.ipynb
+++ b/notebooks/1.0-xs-analysis.ipynb
@@ -913,11 +913,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "33d92b41",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: arrow in /home/zone/.local/lib/python3.9/site-packages (1.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.0 in /home/zone/.local/lib/python3.9/site-packages (from arrow) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/zone/.local/lib/python3.9/site-packages (from python-dateutil>=2.7.0->arrow) (1.15.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install arrow\n"
+   ]
   },
   {
    "cell_type": "code",
